--- a/src/gui/app/index.html
+++ b/src/gui/app/index.html
@@ -85,6 +85,9 @@
         <!-- Iconify ref for MDI icons -->
         <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
 
+        <!-- Hack for js files compiled from ts -->
+        <script>var exports = {};</script>
+
         <script src="./app-main.js"></script>
 
         <!-- include: "type": "js", "files": "controllers/**/*.js" -->
